2014-06-17  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Added macros
	'_alert_critical_instructions_' and
	'_alert_warning_instructions_'.

2014-07-11 Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_manage.pl: To handle multi-byte strings in
	command line arguments (assumes utf-8).

2014-07-08 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/pandora_manage.pl: Fixed problem
	with entities.

2014-07-08 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/pandora_manage.pl: Fixed help screen.

2014-07-08 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/pandora_manage.pl
	  lib/PandoraFMS/Core.pm: Added 'create_data_module_from_local_component'
	and 'create_local_component' functions to CLI.

2014-06-26  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.pl: Remove new line and carriage return
	  characters when parsing the configuration file.

2014-06-24  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Improved host connection.

2014-06-24  Vanessa Gil <vanessa.gil@artica.es>

	* util/recon_scripts/snmpdevices.pl: Deleted file.

2014-06-17  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Removed an unused module.

	* util/recon_scripts/snmp-recon.pl: Always perform a brute-force network scan.
	  Connect hosts via traceroute if no L2 information is available.

2014-06-17  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed bug
	scheduling downtime.

2014-06-17 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/PluginServer.pm: Fixed to handle plugin's
	output that includes multibyte character string.

2014-05-15  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_manage.pl: Fixed typo.

2014-05-15  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_manage.pl: Added support for 'each_ff' and 'ff_timeout' 
	to module creation and modifying options.
	Fixed bug that 'enable_unkown_events' cannot be set by module creation
	options.

2014-06-14  Akihiro Uchida <auchida@rworks.jp>
