@@ -1,3 +1,7 @@
+2014-07-23  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* util/plugin/snmp_remote.pl: some fixed for the snmp v3.
+
 2014-06-17  Vanessa Gil <vanessa.gil@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Added macros
